# msvc-rs

./: .gitignore  Cargo.toml  Rocket.toml
axum_svc/: Cargo.toml  build.rs
axum_svc/src/: main.rs
cron/: Cargo.toml
cron/src/: main.rs
grpc_tonic/: Cargo.toml  README.md
grpc_tonic/proto/: hello.proto
grpc_tonic/src/: client.rs  main.rs  server.rs
labs/: Cargo.toml
labs/src/: main.rs
labs/src/handle_err/: mod.rs  panic_handle.rs
labs/src/vectors/: hashmap.rs  lifetime.rs  mod.rs  strings.rs  struct_enum.rs
leetcode/src/: main.rs
leetcode/src/lcode/: mod.rs  sum_three_number.rs
penalty_msg/: Cargo.toml
penalty_msg/src/: main.rs
penalty_msg/src/config/: mod.rs
penalty_msg/src/controller/: route.rs
penalty_msg/src/models/: mod.rs  penalty_msg.rs
penalty_msg/src/repo/: init.rs  mod.rs  penalty_msg.rs
rocket_svc/: Cargo.toml
rocket_svc/src/: main.rs
rocket_svc/src/config/: logger.rs  mod.rs
rocket_svc/src/model/: db_pool.rs  mod.rs  penalty_msg.rs
rocket_svc/src/router/: index.rs  mod.rs
rocket_svc/src/router/middleware/: cors.rs
rocket_svc/src/svc/: mod.rs  penalty_msg.rs
