[package]
name = "labs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.8", features = ["blocking", "json"]}
serde = { version="1.0", features = ["derive"]}

log = "0.4"
env_logger = "0.9"

[dev-dependencies]
env_logger = "0.9"
