[package]
name = "rocket_svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate", "runtime-tokio-rustls", "chrono"]
