[package]
name = "rocket_svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2",features = ["json"]  }
# rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ,"mysql", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
flexi_logger = "0.24"
log = "0.4"
anyhow = "1.0"
time = "0.3.36"

